--- a/index.html
+++ b/index.html
@@ -51,5 +51,8 @@
         </div>
       </div>
     </div>
+    <footer class="bg-slate-600 px-3 py-7 text-white">
+      <p class="text-center font-semibold">Muhammad Alief © 2022</p>
+    </footer>
   </body>
 </html>
